# EchoPsychFX

./: CMakeLists.txt
src/: CMakeLists.txt  ExciterSaturation.cpp  ExciterSaturation.h  ExciterSaturationComponent.cpp  ExciterSaturationComponent.h  MicroPitchDetune.cpp  MicroPitchDetune.h  MicroPitchDetuneComponent.cpp  MicroPitchDetuneComponent.h  ModDelay.cpp  ModDelay.h  ModDelayComponent.cpp  ModDelayComponent.h  PerceptionModeComponent.cpp  PerceptionModeComponent.h  PerceptionPresetManager.cpp  PerceptionPresetManager.h  PluginEditor.cpp  PluginEditor.h  PluginLookAndFeel.cpp  PluginLookAndFeel.h  PluginProcessor.cpp  PluginProcessor.h  SimpleVerbWithPredelay.cpp  SimpleVerbWithPredelay.h  SimpleVerbWithPredelayComponent.cpp  SimpleVerbWithPredelayComponent.h  SpatialFX.cpp  SpatialFX.h  SpatialFXComponent.cpp  SpatialFXComponent.h  TiltEQ.cpp  TiltEQ.h  TiltEQComponent.cpp  TiltEQComponent.h  UIHelpers.cpp  UIHelpers.h  WidthBalancer.cpp  WidthBalancer.h  WidthBalancerComponent.cpp  (+1 more)
